--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,1 +1,3 @@
 1. Podwójne zalogowania ze strony .../start -> jeżeli logged to redirect na mainPage
+2. addShortcutListener for enter press on start page
+3. wrd exam by category/topic/revert
